--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "check": "biome check --write ./src/**/*",
+    "check-staged": "biome check --staged --write --no-errors-on-unmatched ./src/**/*",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.14.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "husky": "^9",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
